--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,228 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+/*navbar*/
+ :root {
+  --primary: red;
+  --secondary: purple;
 }
+
+header nav {
+  display: flex;
+  gap: 16px;
+  justify-content: end;
+  max-width: 1200px;
+  margin: auto;
+}
+
+header nav h1 {
+  margin-right: auto;
+  border-bottom: 3px solid var(--primary);
+}
+
+header nav a {
+  text-decoration: none;
+  padding: 6px;
+  border-radius: 5px;
+  height: 30px;
+}
+
+header nav a.active {
+  background: var(--primary);
+}
+
+main{
+  max-width: 1200px;
+  margin: 40px auto;
+}
+
+.help-layout nav {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  margin: 30px 0;
+}
+
+.help-layout nav a{
+  padding: 10px;
+  border: 2px solid white;
+  border-radius: 4px;
+  text-decoration: none;
+}
+
+.help-layout nav a:hover{
+  border-color: var(--primary);
+}
+
+.help-layout nav a.active{
+  background-color: var(--primary);
+}
+
+
+.appointment{
+	background: rgba(0,0,0,0.2);
+	padding: 5px 20px;
+	border-radius: 4px;
+	margin: 20px 0;
+} 
+
+.row{
+	display: flex;
+	justify-content: space-evenly;
+}
+.cal2 img{
+	height: 400px;
+	width: 650px;
+}
+form input{
+	border-radius: 50px;
+	height: 40px;
+}
+
+button{
+	color: white;
+	background-color: blue;
+	height: 40px;
+	border-radius: 50px;
+}
+.subscribers{
+	align-items: center;
+}
+.partners{
+	background-color: ghostwhite;
+	display: flex;
+	justify-content: space-around;
+}
+.partners div{
+	width: 80px;
+	height: 50px;
+}
+
+.content{
+	background-color: ghostwhite;
+	height: 200px;
+	margin-top: 20px;
+}
+
+
+.guide{
+	display: flex;
+	justify-content: space-around;
+	margin-top: 50px;
+}
+.number{
+	width: 25px;
+	height: 25px;
+	background-color: blue;
+	color: white;
+	display: flex;
+	justify-content: center;
+	border-radius: 50%;
+	float: left;
+}
+.free{
+	background-color: black;
+	color: white;
+	border-radius: 50px;
+}
+.cal12 img{
+	width: 600px;
+	height: 400px;
+}
+.indcont1{
+	margin-bottom: 30px;
+}
+.cal13 img{
+	width: 600px;
+	height: 500px;
+}
+.indcont2{
+	margin-bottom: 30px;
+}
+.cal14 img{
+	width: 700px;
+	height: 400px;
+}
+.fplans{
+	background-color: blue;
+	margin-bottom: 20px;
+}
+.plans{
+	background-color: white;
+	border-radius: 50px;
+	width: 100px;
+	height: 30px;
+}
+.guide{
+	display: flex;
+	justify-content: space-around;
+	margin-top: 20px;
+}
+.aboutlist{
+	display: flex;
+	flex-direction: column;
+	
+}
+.two{
+	text-align: center;
+}
+	
+
+.thumbnail{
+	border-top-left-radius: 25px;
+	border-top-right-radius: 25px;
+	border-bottom-left-radius: 25px ;
+	border-bottom-right-radius: 25px ;
+	align-content: center;
+	padding: 10px;
+}
+	
+.cal16 img{
+	width: 600px;
+	height: 400px;
+}
+.cal17 img{
+	width: 600px;
+	height: 500px
+}
+.cal14 img{
+	width: 700px;
+	height: 400px;
+}
+.fplans{
+	background-color: blue;
+	margin-bottom: 20px;
+}
+
+.plans{
+	background-color: white;
+	border-radius: 50px;
+	width: 100px;
+	height: 30px;
+}
+
+.guide{
+	display: flex;
+	justify-content: space-around;
+	margin-top: 20px;
+}
+
+.aboutlist{
+	display: flex;
+	flex-direction: column;
+}
+	
+button{
+	background-color: black;
+	color: white;
+	border-radius: 25px;
+}
+	
+.learn{
+	text-align: center;
+}
+	
+
+
